--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -97,6 +97,18 @@
   height: 2.5rem;
 }
 
+#header-display-name #btn-sign-out {
+  position: absolute;
+  top: 0; right: 0;
+  height: 2.5rem;
+  line-height: 2.5rem;
+  opacity: 0.9;
+  font-size: 1.2rem;
+  border-left: 1px solid gray;
+  width: 10%;
+  text-align: center;
+}
+
 /* MAIN NAV
   ========================================================================== */
 #main-nav {
