--- a/app/templates/displaynameheader.html
+++ b/app/templates/displaynameheader.html
@@ -9,7 +9,7 @@
   <div class="centered">
     <span class="ion-person txt-theme"></span> {{ nav.user.displayName }}
   </div>
-  <div id="btn-sign-out" ng-click="nav.btnOpenSignOut()">
+  <div id="btn-sign-out" class="bg-darker" ng-click="nav.btnOpenSignOut()">
     <span class="ion-log-out"></span>
   </div>
 </header>
