--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -95,6 +95,7 @@
   position: fixed;
   top: 0; left: 0; right: 0;
   height: 2.5rem;
+  box-shadow: 0 0 5px 1px black;
 }
 
 #header-display-name #btn-sign-out {
@@ -108,6 +109,7 @@
   width: 15%;
   text-align: center;
   cursor: pointer;
+  box-shadow: 0 0 5px 1px black;
 }
 
 /* MAIN NAV
